--- a/views/hoteles.ejs
+++ b/views/hoteles.ejs
@@ -28,7 +28,7 @@
                     <td><%=data[i].Nombre%></td>
                     <td><%=data[i].Pais%></td>
                     <td><%=data[i].Provincia%></td>
-                    <td><%=data[i].Cantón%></td>
+                    <td><%=data[i].Canton%></td>
                     <td><%=data[i].latitud%></td>
                     <td><%=data[i].longitud%></td>
                     <td>
